# feed-applet-mk2

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  pnpm-workspace.yaml
dna/workdir/: dna.yaml
dnas/feed/workdir/: dna.yaml
nh-launcher-applet/: package-lock.json  package.json  tsconfig.json
nh-launcher-applet/demo/: index.html
nh-launcher-applet/src/: feed-applet.ts  index.ts
nh-launcher-applet/workdir/: dna.yaml  happ.yaml  web-happ.yaml
tests/: package.json
tests/src/feed/posts/: all-posts.test.ts  common.ts  post.test.ts
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: app-test-harness.ts  applet-index.ts  applet-test-harness.ts  appletConfig.ts  contexts.ts  create-or-join-nh.ts  feed-app.ts  feed-service.ts  feed-store.ts  global-toast-styles.css  holochain-app.ts  index.ts  todo-app-test-harness.ts  utils.ts
ui/src/applet/: feed-applet.ts  render-block.ts
ui/src/feed/: b64images.ts  types.ts
ui/src/feed/components/: all-posts.ts  assessment-widget.ts  b64images.ts  button.ts  card.ts  create-post.ts  edit-post.ts  menu.ts  page-header-card.ts  post-card.ts  post-detail.ts  post-display-wrapper.ts  tab-button.ts
ui/src/feed/pages/: all-posts.ts  create-post.ts  edit-post.ts  post-detail.ts
ui/src/feed/posts/: all-posts.ts  create-post-2.ts  create-post.ts  edit-post-2.ts  edit-post.ts  post-2-detail.ts  post-detail.ts  (+1 more)
ui/src/sensemaker/: context-selector.ts  context-view.ts  sensemake-resource.ts
workdir/: happ.yaml  web-happ.yaml
workdir/sensemaker-enabled/: happ.yaml
(+19 files in other folders)
