[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dna/*/zomes/coordinator/*", "dna/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.2"
hdk = "=0.1.2"
holochain_integrity_types = "=0.1.2"
serde = "1"

[workspace.dependencies.posts]
path = "dna/feed/zomes/coordinator/posts"

[workspace.dependencies.posts_integrity]
path = "dna/feed/zomes/integrity/posts"
