[workspace]
resolver = "2"
members = ["dna/*/zomes/coordinator/*", "dna/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = { version = "0.3.0" }
hdk = { version = "0.2.0" }
serde = "1"
holochain = {version = "0.2.0"}
holochain_integrity_types = "=0.1.2"

[workspace.dependencies.posts]
path = "dna/feed/zomes/coordinator/posts"

[workspace.dependencies.posts_integrity]
path = "dna/feed/zomes/integrity/posts"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"